# mnesec

./: Cargo.toml  README.md  build.rs  dict.txt
.github/workflows/: code_quality.yml
src/: dictionary.rs  lib.rs  main.rs
