cargo-features = ["strip"]

[package]
name = "mnesec"
version = "0.1.0"
authors = ["yunmi <yunmikun2@protonmail.com>"]
edition = "2018"

[profile.release]
lto = true
panic = "abort"
strip = "symbols"

[dependencies]
clap = "3.0.0-beta.2"
phf = { version = "0.8.0", features = ["macros"] }
rand = "0.7.3"
