[package]
name = "mnesec"
version = "1.0.0"
authors = ["yunmi <yunmikun2@protonmail.com>", "mfgm2 <repom2@airmail.cc>"]
edition = "2018"

[profile.release]
lto = true
panic = "abort"

[dependencies]
clap = "3.0.0-beta.2"
phf = { version = "0.8.0", features = ["macros"] }

[dev-dependencies]
rand = "0.7.3"
